# PhotosWeb

./: requirements.txt
lukas_mandik_photos/: .gitignore  data.json  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py
lukas_mandik_photos/apps/checkout/: facade.py  views.py
lukas_mandik_photos/lukas_mandik_photos/: .env  allauth_adapter.py  asgi.py  payments.py  settings.py  urls.py  wsgi.py
lukas_mandik_photos/lukas_mandik_photos/catalogue/: __init__.py  admin.py  apps.py  models.py
lukas_mandik_photos/new_venv/: pyvenv.cfg
lukas_mandik_photos/photos_web/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
lukas_mandik_photos/photos_web/migrations/: 0001_initial.py  0002_alter_photo_slug_alter_photo_user_likes_and_more.py  0002_photo_image_name_alter_photo_image.py  0003_alter_photo_image_name.py  0003_printsize_surfacetype.py  0004_auto_20230422_1117.py  0004_photo_datetime_photo_make_photo_model.py  0005_remove_photo_datetime_remove_photo_make_and_more.py  0006_remove_metaphoto_model_metaphoto_gps.py  0007_metaphoto_height_metaphoto_orientation_and_more.py  0008_photo_exif_data.py  0009_remove_photo_exif_data.py  0010_alter_photo_image.py  0011_photo_device_photo_orientation_photo_timestamp.py  0012_photo_gps_coordinates_photo_height_photo_meta_data_and_more.py  0013_photo_meta_data2.py  0014_remove_photo_meta_data2.py  0015_photo_bands_photo_brightness_photo_image_mode_and_more.py  0016_photo_webp_image.py  0017_alter_photo_webp_image.py  (+17 more)
lukas_mandik_photos/staticfiles/: style.css
(+44 files in other folders)
